[gd_scene load_steps=6 format=3 uid="uid://c0ub5wtu47sbo"]

[ext_resource type="Script" path="res://Settings.gd" id="1_skh8w"]
[ext_resource type="Texture2D" uid="uid://bcwqxeqjo5bwx" path="res://buttongamesettingbackground.webp" id="1_xsc2p"]
[ext_resource type="Script" path="res://music_slider.gd" id="2_8tq8u"]
[ext_resource type="PackedScene" uid="uid://dk8qx15keto30" path="res://GlobalAudio.tscn" id="2_22mcg"]

[sub_resource type="AudioStream" id="AudioStream_r7pbj"]

[node name="Settings" type="Node2D"]
position = Vector2(24, 4)

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -28.0
offset_top = -270.0
offset_right = 1135.0
offset_bottom = 754.0
texture = ExtResource("1_xsc2p")

[node name="SettingTitle" type="Label" parent="."]
offset_left = 381.0
offset_top = -5.0
offset_right = 768.0
offset_bottom = 132.0
theme_override_colors/font_color = Color(0.968627, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "Settings"
horizontal_alignment = 1

[node name="Button" type="Button" parent="SettingTitle"]
layout_mode = 0
offset_left = 156.0
offset_top = 586.0
offset_right = 329.0
offset_bottom = 617.0
theme_override_colors/font_color = Color(0.984314, 0, 0, 1)
text = "Exit Settings"
script = ExtResource("1_skh8w")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 41.0
offset_top = 101.0
offset_right = 1094.0
offset_bottom = 165.0

[node name="Music Volume" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.972549, 0, 0, 1)
text = "Music Volume"

[node name="music slider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001
script = ExtResource("2_8tq8u")

[node name="ConfirmSettings" type="Button" parent="."]
offset_left = 229.0
offset_top = 581.0
offset_right = 462.0
offset_bottom = 612.0
theme_override_colors/font_disabled_color = Color(0.956863, 0, 0, 1)
theme_override_colors/font_color = Color(0.976471, 0, 0, 1)
text = "Apply Settings"

[node name="AudioStreamPlayer" parent="." instance=ExtResource("2_22mcg")]
stream = SubResource("AudioStream_r7pbj")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="SettingTitle/Button" to="SettingTitle/Button" method="_on_pressed"]
[connection signal="mouse_exited" from="VBoxContainer/music slider" to="SettingTitle/Button" method="_on_h_slider_mouse_exited"]
[connection signal="pressed" from="ConfirmSettings" to="SettingTitle/Button" method="_on_confirm_settings_pressed"]
